# rs-vpsman

./: Cargo.toml  README.md  config.yml
.github/workflows/: create_new_tag.yml  release.yml  rust.yml
src/: config.yml  file.rs  lib.rs  main.rs  todos.rs
